--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
     "dotenv": "^17.2.3",
     "firebase": "^12.8.0",
+    "groq-sdk": "^0.37.0",
     "lucide-react": "^0.563.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
